Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -51,7 +51,6 @@
         "\n",
         "#Extensions1.5 \n",
         "\n",
-        "\n",
         "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
         "!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py -O /content/stable-diffusion-webui/scripts/run_n_times.py\n",
         "\n",
@@ -119,13 +118,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "G87RdudfeFaV"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -138,7 +130,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name =\"Plat_Diffusion_v1.3.1\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo_7th_Heaven_Mix\", \"Corneo_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
+        "model_name =\"LonganMix\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo_7th_Heaven_Mix\", \"Corneo_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -244,13 +236,12 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title カスタムモデル(任意)\n",
-        " #@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
-        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\"] {allow-input: false}\n",
+        "#@title カスタムモデルまたはExtensionsの追加(任意)\n",
+        "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
+        "\n",
+        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
-        "elif model_type ==\"Texual_Inversion\":\n",
-        "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
         "elif model_type == \"Hypernetwork\":\n",
         "    !git https://github.com/antis0007/sd-webui-multiple-hypernetworks.git /content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\"\n",
@@ -260,34 +251,61 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type == \"LyCORIS\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
-        "elif model_type == \"Wildcards\":\n",
-        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
-        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
-        "elif model_type == \"VAE\":\n",
-        "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "\n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
-        " \n",
-        "if modelUrl == \"\":\n",
-        "  print(\"\")\n",
+        "if model_type == \"Wildcards\":\n",
+        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
+        "   \n",
+        "elif model_type == \"Webui_Extension\":\n",
+        "    def install(url):\n",
+        "        import os\n",
+        "        base_name = os.path.basename(url)\n",
+        "        print(\"base_name\")    \n",
+        "        pretrained_model = \"/content/stable-diffusion-webui/extensions\"\n",
+        "        !git clone {url} {pretrained_model}/{base_name}\n",
+        "    install(modelUrl)\n",
+        "\n",
         "else:\n",
-        "  def install(url):\n",
-        "      base_name = os.path.basename(url)\n",
+        "    def install(url):\n",
+        "        base_name = os.path.basename(url)\n",
+        "        print(base_name)\n",
+        "        if url.startswith(\"https://drive.google.com\"):\n",
+        "            os.chdir(pretrained_model)\n",
+        "            !gdown --fuzzy {url}\n",
+        "        elif url.startswith(\"https://huggingface.co/\"):\n",
+        "                    #@markdown ▼Hugging Faceのプライベートモデルを使用する場合、[アクセストークン](https://huggingface.co/settings/tokens)を入力してください。\n",
+        "            huggingface_token = \"\"  # @param {type:\"string\"}\n",
+        "            user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "            if \"/blob/\" in url:\n",
+        "                url = url.replace(\"/blob/\", \"/resolve/\")          \n",
+        "            if model_type == \"VAE\":\n",
+        "                pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
+        "                    base_name = base_name.replace(\".ckpt\", \".vae.pt\").replace(\".safetensors\", \".vae.pt\")\n",
+        "                    print(base_name)\n",
+        "            elif model_type ==\"Texual_Inversion\":\n",
+        "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
+        "                    base_name = base_name.replace(\".ckpt\", \".pt\").replace(\".safetensors\", \".pt\")\n",
+        "                    print(base_name)                \n",
+        "                pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
+        "                \n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
         "\n",
-        "      if url.startswith(\"https://drive.google.com\"):\n",
-        "          os.chdir(pretrained_model)\n",
-        "          !gdown --fuzzy {url}\n",
-        "      elif url.startswith(\"https://huggingface.co/\"):\n",
-        "          if \"/blob/\" in url:\n",
-        "              url = url.replace(\"/blob/\", \"/resolve/\")\n",
-        "                  #@markdown ▼Hugging Faceのプライベートモデルを使用する場合、[アクセストークン](https://huggingface.co/settings/tokens)を入力してください。\n",
-        "          huggingface_token = \"\"  # @param {type:\"string\"}\n",
-        "          user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "          !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
-        "      else:\n",
-        "          !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "        else:\n",
+        "            if model_type == \"VAE\":\n",
+        "                pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
+        "                    base_name = base_name.replace(\".ckpt\", \".vae.pt\").replace(\".safetensors\", \".vae.pt\")\n",
+        "                    print(base_name)\n",
+        "            elif model_type ==\"Texual_Inversion\":\n",
+        "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
+        "                    base_name = base_name.replace(\".ckpt\", \".pt\").replace(\".safetensors\", \".pt\")\n",
+        "                    print(base_name)                \n",
+        "                pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
         "\n",
-        "  install(modelUrl)\n",
+        "    install(modelUrl)\n",
         "\n",
         "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://camo.qiitausercontent.com/76671e92e7da4f86f522fcb372fb49db27fa805b/68747470733a2f2f71696974612d696d6167652d73746f72652e73332e61702d6e6f727468656173742d312e616d617a6f6e6177732e636f6d2f302f3533333834342f66623462326238382d383938302d373932362d353063632d3063613830386137343334642e706e67)を入力してください。ファイルが見つからない場合はスキップされます。\n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
@@ -384,15 +402,16 @@
         "Lycoris_url = Lycoris_dict.get(Lycoris_name)\n",
         "\n",
         "def install(Lora_url, Textual_url,Lycoris_url):\n",
+        "\n",
         "    if Lora_url :\n",
-        "        base_name = os.path.basename(Lora_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Lora_url} -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {Lora_name}.safetensors     \n",
+        "        base_name1 = os.path.basename(Lora_url)\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Lora_url} -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name1} {Lora_url}     \n",
         "    if Textual_url :\n",
-        "        base_name = os.path.basename(Textual_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Textual_url} -d /content/stable-diffusion-webui/embeddings -o {Textual_name}.pt\n",
+        "        base_name2 = os.path.basename(Textual_url)\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Textual_url} -d /content/stable-diffusion-webui/embeddings {Textual_url}\n",
         "    if Lycoris_url :\n",
-        "        base_name = os.path.basename(Lycoris_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Lycoris_url} -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {Lycoris_name}.safetensors\n",
+        "        base_name3 = os.path.basename(Lycoris_url)\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Lycoris_url} -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name3} {Lycoris_url}\n",
         "\n",
         "install(Lora_url, Textual_url,Lycoris_url)"
       ],
