Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -266,6 +266,9 @@
         "        !git clone {url} {pretrained_model}/{base_name}\n",
         "    install(modelUrl)\n",
         "\n",
+        "elif modelUrl == \"\":\n",
+        "  print(\"スキップ\")\n",
+        "  \n",
         "else:\n",
         "    def install(url):\n",
         "        base_name = os.path.basename(url)\n",
@@ -391,7 +394,7 @@
         "}\n",
         "\n",
         "#Lycoris-LoRA\n",
-        "Lycoris_name =\"\\u6E96\\u5099\\u4E2D\" #@param [\"\",\"準備中\"] {allow-input:false}\n",
+        "Lycoris_name =\"\" #@param [\"\",\"準備中\"] {allow-input:false}\n",
         "#準備中\n",
         "Lycoris_dict={\n",
         "\t\t\"\":\"\",\n",
