Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -256,7 +256,8 @@
         "if model_type == \"Wildcards\":\n",
         "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
-        "   \n",
+        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "\n",
         "elif model_type == \"Webui_Extension\":\n",
         "    def install(url):\n",
         "        import os\n",
