Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -423,13 +423,14 @@
         "id": "QDG0oyNU6R1L",
         "cellView": "form"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#@title  4.WebUIの起動\n",
+        "%cd /content/stable-diffusion-webui\n",
         "!python launch.py --listen --xformers --enable-insecure-extension-access --theme dark --gradio-queue --multiple"
       ],
       "metadata": {
