Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -237,7 +237,7 @@
       "cell_type": "code",
       "source": [
         "#@title カスタムモデルまたはExtensionsの追加(任意)\n",
-        "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
+        "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) ・[LoRAの使用方法](https://intindex.stars.ne.jp/archives/12296)\n",
         "\n",
         "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
