Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -130,7 +130,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name =\"anything-v4.0\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo_7th_Heaven_Mix\", \"Corneo_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
+        "model_name =\"7th_anime_v3_A\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's_7th_Heaven_Mix\", \"Corneo's_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -171,8 +171,8 @@
         "    \"meadmix\":\"https://huggingface.co/sazanka-imoto/MeadMix/resolve/main/meadmix.safetensors\",\n",
         "    \"Nabylon-v1.0\":\"https://huggingface.co/NegiInNattoMaki/Nabylon-v1.0/resolve/main/Nabylon-v1.0-fp16.safetensors\",\n",
         "    \"LonganMix\":\"https://huggingface.co/Hemlok/LonganMix/resolve/main/LonganMix-fp16.ckpt\",\n",
-        "    \"Corneo_7th_Heaven_Mix\":\"https://civitai.com/api/download/models/5338\",\n",
-        "    \"Corneo_Shinra26_Mix\":\"https://civitai.com/api/download/models/6918\",\n",
+        "    \"Corneo's_7th_Heaven_Mix\":\"https://civitai.com/api/download/models/5338\",\n",
+        "    \"Corneo's_Shinra26_Mix\":\"https://civitai.com/api/download/models/6918\",\n",
         "    \"atwmix_test2\":\"https://huggingface.co/atsuwo/atwmix_test2/resolve/main/atwmix_test2.ckpt\",\n",
         "    \"Graham_Special\":\"https://huggingface.co/Graham-san/Graham_Special/resolve/main/Graham%20Special%20v1.ckpt\",\n",
         "    \"BalorV2featAbyssOrange2\":\"https://huggingface.co/ploughB660/Balor-V2/resolve/main/BalorV2featAbyssOrange2.safetensors\",\n",
@@ -197,8 +197,8 @@
         "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
         "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {model_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name} \n",
         "    else:\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {model_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {model_name}.safetensors\n",
-        "\n",
+        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion {model_url}\n",
+        "        \n",
         "install(model_url)"
       ]
     },
@@ -206,24 +206,28 @@
       "cell_type": "code",
       "source": [
         "#@title 3.VAE\n",
-        "vae_name = \"orangemix\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix\"] {allow-input: false}\n",
+        "vae_name = \"Anything-V3.0.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
         "    \"vae-ft-mse-560000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-ema-original/resolve/main/vae-ft-ema-560000-ema-pruned.ckpt\",\n",
         "    \"kl-f8-anime\": \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\",\n",
         "    \"kl-f8-anime2\": \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt\",\n",
-        "    \"Anything-V3.0\": \"https://huggingface.co/ckpt/anything-v3.0/resolve/main/Anything-V3.0.vae.pt\",\n",
+        "    \"Anything-V3.0.vae.pt\": \"https://huggingface.co/ckpt/anything-v3.0/resolve/main/Anything-V3.0.vae.pt\",\n",
         "    \"autoencoder_fix_kl-f8-trinart_characters\": \"https://huggingface.co/naclbit/trinart_characters_19.2m_stable_diffusion_v1/resolve/main/autoencoder_fix_kl-f8-trinart_characters.ckpt\",\n",
-        "    \"orangemix\": \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt\",\n",
+        "    \"orangemix.vae.pt\": \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt\",\n",
         "}\n",
         "\n",
         "vae_url = url_dict.get(vae_name)\n",
         "\n",
         "def install(vae_url):\n",
         "    base_name = os.path.basename(vae_url)\n",
-        "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o {vae_name}.vae.pt\n",
+        "    if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
+        "        base_name = base_name.replace(\".ckpt\", \".vae.pt\").replace(\".safetensors\", \".vae.pt\") \n",
+        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 {vae_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name}           \n",
         "\n",
+        "    print(base_name)\n",
+        "     \n",
         "install(vae_url)\n"
       ],
       "metadata": {
@@ -237,8 +241,7 @@
       "cell_type": "code",
       "source": [
         "#@title カスタムモデルまたはExtensionsの追加(任意)\n",
-        "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) ・[LoRAの使用方法](https://intindex.stars.ne.jp/archives/12296)\n",
-        "\n",
+        "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
         "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
@@ -351,6 +354,7 @@
       "cell_type": "code",
       "source": [
         "#@title 追加学習モデル LoRA・Textual Inversion･Lycoris（任意）\n",
+        "#@markdown [LoRAの使用方法](https://intindex.stars.ne.jp/archives/12296)\n",
         "\n",
         "\n",
         "Lora_name =\"\" #@param [\"\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
