Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -298,7 +298,7 @@
       "cell_type": "code",
       "source": [
         "#@title 追加学習モデル LoRA・Textual Inversion･Lycoris（任意）\n",
-        "\n",
+        "#@markdown [LoRAの使用方法](https://intindex.stars.ne.jp/archives/12296)\n",
         "\n",
         "Lora_name =\"\" #@param [\"\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
