Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -108,7 +108,7 @@
         "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n",
         "\n",
         "#ドライブをマウント\n",
-        "mount_drive = False # @param {type: \"boolean\"}\n",
+        "Mount_Drive = False # @param {type: \"boolean\"}\n",
         "\n",
         "if mount_drive:\n",
         "    import os\n",
