Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -110,7 +110,7 @@
         "#ドライブをマウント\n",
         "Mount_Drive = False # @param {type: \"boolean\"}\n",
         "\n",
-        "if mount_drive:\n",
+        "if Mount_Drive:\n",
         "    import os\n",
         "    from google.colab import drive\n",
         "    if not os.path.exists(\"/content/drive\"):\n",
@@ -447,6 +447,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**生成した画像の利用については自己判断および自己責任でお願いします。**<br>\n",
+        "<br>\n",
         "▼学習済みモデルの検索<br>\n",
         "[HuggingFace](https://huggingface.co/ckpt)<br>\n",
         "[Civitai](https://civitai.com/)<br><br>\n",
