--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -435,6 +435,8 @@
       "source": [
         "#@title  4.WebUIの起動\n",
         "%cd /content/stable-diffusion-webui\n",
+        "!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' /content/stable-diffusion-webui/modules/shared.py\n",
+        "\n",
         "!python launch.py --listen --xformers --enable-insecure-extension-access --theme dark --gradio-queue --multiple"
       ],
       "metadata": {
