Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -32,6 +32,8 @@
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
         "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
+        "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
+        "\n",
         "#Extensions2　任意\n",
         "Extensions = True #@param {'type':'boolean'}\n",
         "if Extensions == True :\n",
@@ -39,7 +41,6 @@
         "  !git clone https://github.com/toshiaki1729/stable-diffusion-webui-dataset-tag-editor.git /content/stable-diffusion-webui/extensions/dataset-tag-editor\n",
         "  !git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui /content/stable-diffusion-webui/extensions/sdweb-merge-block-weighted-gui\n",
         "  !git clone -b v2.0 https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
-        "  !git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
         "  !git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-two-shot\n",
         "  !git apply --ignore-whitespace /extensions/stable-diffusion-webui-two-shot/cfg_denoised_callback-ea9bd9fc.patch\n",
         "  !git clone https://github.com/hallatore/stable-diffusion-webui-chatgpt-utilities /content/stable-diffusion-webui/extensions/stable-diffusion-webui-chatgpt-utilities\n",
@@ -70,9 +71,9 @@
         "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n",
         "\n",
         "#ドライブをマウント\n",
-        "mount_drive = False # @param {type: \"boolean\"}\n",
+        "Mount_Drive = False # @param {type: \"boolean\"}\n",
         "\n",
-        "if mount_drive:\n",
+        "if Mount_Drive:\n",
         "    import os\n",
         "    from google.colab import drive\n",
         "    if not os.path.exists(\"/content/drive\"):\n",
@@ -378,6 +379,7 @@
       "source": [
         "#@title  4.WebUIの起動\n",
         "!sed -i -e '''/prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
+        "!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' /content/stable-diffusion-webui/modules/shared.py\n",
         "!python launch.py --share --xformers --enable-insecure-extension-access --gradio-queue --no-half-vae "
       ],
       "metadata": {
