Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -357,9 +357,10 @@
         "#@markdown [LoRAの使用方法](https://intindex.stars.ne.jp/archives/12296)\n",
         "\n",
         "\n",
-        "Lora_name =\"\" #@param [\"\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
+        "Lora_name =\"AI_uehara\" #@param [\"\",\"AI_uehara\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
         "Lora_dict={\n",
+        "\t\"AI_uehara\":\"https://civitai.com/api/download/models/23042\",\n",
         "\t\"Anime_Screencap_Style_LoRA\":\"https://civitai.com/api/download/models/5742\" ,\n",
         "\t\"One_Piece_Wano_Style_LoRA\":\"https://civitai.com/api/download/models/6331\" ,\n",
         "\t\"Eula_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Eula/eulaMedium.safetensors\" ,\n",
