Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -47,7 +47,21 @@
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
         "%cd /content/stable-diffusion-webui\n",
         "#EasyNegative\n",
-        "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt"
+        "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n",
+        "\n",
+        "#日本語化\n",
+        "Japanese = False #@param {'type':'boolean'}\n",
+        "if Japanese == True :\n",
+        "#日本語化パッチの追加ダウンロード\n",
+        "    !git clone https://github.com/Katsuyuki-Karasawa/stable-diffusion-webui-localization-ja_JP /content/stable-diffusion-webui/extensions/stable-diffusion-webui-localization-ja_JP\n",
+        "    %cd /content/stable-diffusion-webui/\n",
+        "    import json\n",
+        "    #日本語化 　\n",
+        "    data = {\"localization\": \"ja_JP\"} \n",
+        "    #関西弁化　\n",
+        "   #data = {\"localization\": \"ks_JP\"}\n",
+        "    with open(\"config.json\", \"w\") as f:\n",
+        "        json.dump(data, f)"
       ]
     },
     {
