--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -135,7 +135,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name = \"7th_anime_v1\"  #@param [\"7th_anime_v1\",\"7th_anime_v2\",\"7th_anime_v3\",\"7th_test\",\"7th_JP_test\",\"7thHeaven_Izumi_abyssdiff\",\"AbyssOrangeMix\",\"AbyssOrangeMix2\",\"AbyssOrangeMix3\",\"ACertainModel\",\"BloodOrangeMix\",\"ACertainThing\",\"Aikimi_dC3\",\"Aikimi_dC4\",\"Aikimi_diffusion_base_wd-1-5_beta2\",\"Almond_mix\",\"ambientmix\",\"anime-pencil-diffusion\",\"anysium_anypas\",\"Anything V5\",\"anything-v3.0\",\"anything-v4.0\",\"AnythingV-4.5\",\"ariamix\",\"Baka-Diffusion\",\"BalorMix-V4\",\"Balor-V2\",\"basil_mix\",\"BloodOrangeMix\",\"blue_pencil\",\"blue_pencil V-5\",\"blue_pencil_V4\",\"blue_pencil-v3\",\"Burger-Mix\",\"carrot-commercial-v1\",\"ChilloutMix\",\"CiderMix\",\"cinnamon_mix\",\"cool-japan-diffusion\",\"cornflowerStylizedAnime_v8\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"counterfeit-V2.5 2.5d tweak\",\"Crowbox-Vol.1\",\"DateMix\",\"Defacta-2th\",\"Defmix-v1.0\",\"Defmix-v2.0\",\"Deyoyoyo\",\"dreamlike-anime-1.0\",\"EerieOrangeMix\",\"EerieOrangeMix2\",\"ElyOrangeMix\",\"EmiPhaV\",\"endlessMix\",\"flex-diffusion-2-1\",\"GestaltMix-v1.0\",\"Graham_Special\",\"graupel-v1\",\"GuchaGucha_Shiki\",\"GyoZanMix\",\"HighRiseMixV1\",\"HighRiseMixV2\",\"HimawariMix-v1.0\",\"HimawariMix-v1.10\",\"HimawariMix-V2\",\"HonyararaMix\",\"Illuminati Diffusion v1.1\",\"JewelDefactaPastel\",\"LimeMix\",\"LiveArcaMix\",\"MagicalMix_v1\",\"MagicalMix_v2\",\"MeadMix\",\"MISA\",\"mitsua-diffusion-one\",\"MORIMORImix\",\"Nabylon\",\"NO133_104\",\"openjourney\",\"OsukiniMix\",\"pastel-mix\",\"RainierMix\",\"phantom-diffusion\",\"picasso-diffusion-1-1\",\"Plat Diffusion\",\"pvc-v3\",\"quattro-4merge-plus-i\",\"QuinceMix\",\"RacyMixV1\",\"Rainier-base\",\"RainierMix\",\"RainierMixV1\",\"RainierMixV2\",\"RainMix\",\"RDtMix\",\"Realistic Vision V2.0\",\"RefSlave-V1\",\"Replicant-V1.0\",\"Riga_Collection-v1\",\"RuminationDiffusion\",\"SakuraMix-V2\",\"Salt_mix\",\"SD2boy\",\"SD2boy_girl\",\"SD-Silicon28\",\"SD-Silicon29\",\"SEmix\",\"ShuimohuaAnime\",\"MORIMORImix\",\"SnowMix\",\"SSSSLLDDLL\",\"subtly\",\"SukiAni-mix\",\"SukiyakiMix-v1.0\",\"untitled-replicant\",\"wd-1-5-beta2-extra\",\"wd-1-5-beta2\",\"whitelady-V2\",\"Wonton ColorBox Enhanced\",\"X-mix\",\"xtracolor.v11\",\"YuzuGinger\",\"YuzuLemonChaiLatte\",\"YuzuLemonMilk\"] {allow-input: false}\n",
+        "model_name = \"ChilloutMix\"  #@param [\"7th_anime_v1\",\"7th_anime_v2\",\"7th_anime_v3\",\"7th_test\",\"7th_JP_test\",\"7thHeaven_Izumi_abyssdiff\",\"AbyssOrangeMix\",\"AbyssOrangeMix2\",\"AbyssOrangeMix3\",\"ACertainModel\",\"BloodOrangeMix\",\"ACertainThing\",\"Aikimi_dC3\",\"Aikimi_dC4\",\"Aikimi_diffusion_base_wd-1-5_beta2\",\"Almond_mix\",\"ambientmix\",\"anime-pencil-diffusion\",\"anysium_anypas\",\"Anything V5\",\"anything-v3.0\",\"anything-v4.0\",\"AnythingV-4.5\",\"ariamix\",\"Baka-Diffusion\",\"BalorMix-V4\",\"Balor-V2\",\"basil_mix\",\"BloodOrangeMix\",\"blue_pencil\",\"blue_pencil V-5\",\"blue_pencil_V4\",\"blue_pencil-v3\",\"Burger-Mix\",\"carrot-commercial-v1\",\"ChilloutMix\",\"CiderMix\",\"cinnamon_mix\",\"cool-japan-diffusion\",\"cornflowerStylizedAnime_v8\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"counterfeit-V2.5 2.5d tweak\",\"Crowbox-Vol.1\",\"DateMix\",\"Defacta-2th\",\"Defmix-v1.0\",\"Defmix-v2.0\",\"Deyoyoyo\",\"dreamlike-anime-1.0\",\"EerieOrangeMix\",\"EerieOrangeMix2\",\"ElyOrangeMix\",\"EmiPhaV\",\"endlessMix\",\"flex-diffusion-2-1\",\"GestaltMix-v1.0\",\"Graham_Special\",\"graupel-v1\",\"GuchaGucha_Shiki\",\"GyoZanMix\",\"HighRiseMixV1\",\"HighRiseMixV2\",\"HimawariMix-v1.0\",\"HimawariMix-v1.10\",\"HimawariMix-V2\",\"HonyararaMix\",\"Illuminati Diffusion v1.1\",\"JewelDefactaPastel\",\"LimeMix\",\"LiveArcaMix\",\"MagicalMix_v1\",\"MagicalMix_v2\",\"MeadMix\",\"MISA\",\"mitsua-diffusion-one\",\"MORIMORImix\",\"Nabylon\",\"NO133_104\",\"openjourney\",\"OsukiniMix\",\"pastel-mix\",\"RainierMix\",\"phantom-diffusion\",\"picasso-diffusion-1-1\",\"Plat Diffusion\",\"pvc-v3\",\"quattro-4merge-plus-i\",\"QuinceMix\",\"RacyMixV1\",\"Rainier-base\",\"RainierMix\",\"RainierMixV1\",\"RainierMixV2\",\"RainMix\",\"RDtMix\",\"Realistic Vision V2.0\",\"RefSlave-V1\",\"Replicant-V1.0\",\"Riga_Collection-v1\",\"RuminationDiffusion\",\"SakuraMix-V2\",\"Salt_mix\",\"SD2boy\",\"SD2boy_girl\",\"SD-Silicon28\",\"SD-Silicon29\",\"SEmix\",\"ShuimohuaAnime\",\"MORIMORImix\",\"SnowMix\",\"SSSSLLDDLL\",\"subtly\",\"SukiAni-mix\",\"SukiyakiMix-v1.0\",\"untitled-replicant\",\"wd-1-5-beta2-extra\",\"wd-1-5-beta2\",\"whitelady-V2\",\"Wonton ColorBox Enhanced\",\"X-mix\",\"xtracolor.v11\",\"YuzuGinger\",\"YuzuLemonChaiLatte\",\"YuzuLemonMilk\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"7th_anime_v1\":[\"https://huggingface.co/syaimu/7th_Layer/resolve/main/7th_anime_v1/7th_anime_v1.1.safetensors\"],\n",
@@ -191,7 +191,7 @@
         "    \"EerieOrangeMix\":[\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/EerieOrangeMix/EerieOrangeMix.safetensors\",\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/EerieOrangeMix/EerieOrangeMix_base.ckpt\",\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/EerieOrangeMix/EerieOrangeMix_half.safetensors\",\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/EerieOrangeMix/EerieOrangeMix_night.safetensors\"],\n",
         "    \"EerieOrangeMix2\":[\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/EerieOrangeMix/EerieOrangeMix2.safetensors\",\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/EerieOrangeMix/EerieOrangeMix2_base.ckpt\",\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/EerieOrangeMix/EerieOrangeMix2_half.safetensors\",\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/EerieOrangeMix/EerieOrangeMix2_night.safetensors\"],\n",
         "    \"ElyOrangeMix\":[\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/ElyOrangeMix/ElyNightOrangeMix.ckpt\",\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/ElyOrangeMix/ElyOrangeMix.ckpt\",\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/ElyOrangeMix/ElyOrangeMix_half.ckpt\"],\n",
-        "    \"EmiPhaV\":[\"https://huggingface.co/EmiPha/EmiPhaV/resolve/main/EmiPhaV3.safetensors\",https://huggingface.co/EmiPha/EmiPhaV/resolve/main/EmiphaV4.safetensors],\n",
+        "    \"EmiPhaV\":[\"https://huggingface.co/EmiPha/EmiPhaV/resolve/main/EmiPhaV3.safetensors\",\"https://huggingface.co/EmiPha/EmiPhaV/resolve/main/EmiphaV4.safetensors\"],\n",
         "    \"endlessMix\":[\"https://huggingface.co/teasan/endlessMix/resolve/main/model/v1/endlessMixV1fp16.safetensors\",\"https://huggingface.co/teasan/endlessMix/resolve/main/model/v2/endlessMixV2Afp16.safetensors\",\"https://huggingface.co/teasan/endlessMix/resolve/main/model/v2/endlessMixV2RAfp16.safetensors\",\"https://huggingface.co/teasan/endlessMix/resolve/main/model/v2/endlessMixV2Rfp16.safetensors\"],\n",
         "    \"flex-diffusion-2-1\":[\"None\"],\n",
         "    \"GestaltMix-v1.0\":[\"https://huggingface.co/Defpoint/GestaltMix-v1.0/resolve/main/Gestalt-v1.0.safetensors\"],\n",
@@ -263,28 +263,27 @@
         "    \"YuzuGinger\":[\"https://huggingface.co/thiros/YuzuLemonTea/resolve/main/YuzuGinger_v1-pruned.safetensors\"],\n",
         "    \"YuzuLemonChaiLatte\":[\"https://huggingface.co/thiros/YuzuLemonTea/resolve/main/YuzuLemonChaiLatte_v3.5-pruned.safetensors\",\"https://huggingface.co/thiros/YuzuLemonTea/resolve/main/YuzuLemonChaiLatte_v9.5-pruned.safetensors\"],\n",
         "    \"YuzuLemonMilk\":[\"https://huggingface.co/thiros/YuzuLemonTea/resolve/main/YuzuLemonMilk_v1.5-pruned.safetensors\"],\n",
-        "    \"\":[\"\"],\n",
         "\n",
         "}\n",
         "\n",
         "model_urls = model_dict.get(model_name)\n",
-        "for url in model_urls:\n",
-        "    def install(model_url):\n",
-        "        base_name = os.path.basename(model_url)\n",
-        "\n",
-        "        if model_url.startswith(\"https://drive.google.com\"):\n",
+        "for url in model_urls:   \n",
+        "    def install(url):\n",
+        "        base_name = os.path.basename(url)   \n",
+        "        if url.startswith(\"https://drive.google.com\"):\n",
         "            os.chdir(\"/content/stable-diffusion-webui/models/Stable-diffusion\")\n",
-        "            !gdown --fuzzy {model_url}\n",
-        "        elif model_url.startswith(\"https://huggingface.co/\"):\n",
-        "            if \"/blob/\" in model_url:\n",
-        "                model_url = model_url.replace(\"/blob/\", \"/resolve/\")\n",
+        "            !gdown --fuzzy {url}\n",
+        "        elif url.startswith(\"https://huggingface.co/\"):\n",
+        "            if \"/blob/\" in url:\n",
+        "                url = url.replace(\"/blob/\", \"/resolve/\")\n",
         "            huggingface_token =\"YOUR_HUGGINGFACE_TOKEN\" # 自分のトークンに変更\n",
         "            user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "            !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {model_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name} \n",
+        "            !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name}\n",
         "        else:\n",
-        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion {model_url}\n",
-        "            \n",
-        "    install(model_url)\n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion {url}\n",
+        "                \n",
+        "    install(url)\n",
+        "\n",
         "\n"
       ]
     },
@@ -327,7 +326,7 @@
       "cell_type": "code",
       "source": [
         "#@title ドライブをマウント(任意)\n",
-        "Mount_Drive = False # @param {type: \"boolean\"}\n",
+        "Mount_Drive = True # @param {type: \"boolean\"}\n",
         "\n",
         "if Mount_Drive:\n",
         "    import os\n",
@@ -335,25 +334,23 @@
         "    if not os.path.exists(\"/content/drive\"):\n",
         "        drive.mount(\"/content/drive\")\n",
         "\n",
-        "model_type1 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
-        "if model_type1 == \"Checkpoint\":\n",
+        "model_type_1 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
+        "if model_type_1 == \"Checkpoint\":\n",
         "    pretrained_model_1 = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
-        "elif model_type1 == \"Hypernetwork\":\n",
+        "elif model_type_1 == \"Hypernetwork\":\n",
         "    !git https://github.com/antis0007/sd-webui-multiple-hypernetworks.git /content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\n",
         "    pretrained_model_1 = \"/content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\"\n",
-        "elif model_type1 ==\"Aesthetic_Gradients\":\n",
+        "elif model_type_1 ==\"Aesthetic_Gradients\":\n",
         "    pretrained_model_1 = \"/content/stable-diffusion-webui/embeddings\"\n",
-        "elif model_type1 == \"LoRA\":\n",
+        "elif model_type_1 == \"LoRA\":\n",
         "    pretrained_model_1 = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
-        "elif model_type1 == \"LyCORIS\":\n",
+        "elif model_type_1 == \"LyCORIS\":\n",
         "    pretrained_model_1 = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
-        "elif model_type == \"Wildcards\":\n",
+        "elif model_type_1 == \"Wildcards\":\n",
         "    pretrained_model_1  = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
-        "\n",
-        "#@markdown ▼driveのフォルダをコピー\n",
-        "driveFolder=\"\\u4F8B:\" #@param {type: \"string\"}\n",
+        "    \n",
         "#@markdown ▼driveからフォルダまたはファイルをコピー\n",
-        "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
+        "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/output/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
         "  if \"例:\" in drivePath:\n",
@@ -394,7 +391,7 @@
         "#@title カスタムモデルまたはExtensionsの追加(任意)\n",
         "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
         "model_type_2 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
-        "if model_type2 == \"Checkpoint\":\n",
+        "if model_type_2 == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type_2 == \"Hypernetwork\":\n",
         "    !git https://github.com/antis0007/sd-webui-multiple-hypernetworks.git /content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\n",
@@ -407,12 +404,12 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "\n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
-        "if model_type == \"Wildcards\":\n",
+        "if model_type_2 == \"Wildcards\":\n",
         "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
         "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
         "\n",
-        "elif model_type == \"Webui_Extension\":\n",
+        "elif model_type_2 == \"Webui_Extension\":\n",
         "    def install(url):\n",
         "        import os\n",
         "        base_name = os.path.basename(url)\n",
@@ -437,12 +434,12 @@
         "            user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
         "            if \"/blob/\" in url:\n",
         "                url = url.replace(\"/blob/\", \"/resolve/\")          \n",
-        "            if model_type == \"VAE\":\n",
+        "            if model_type_2 == \"VAE\":\n",
         "                pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
         "                    base_name = base_name.replace(\".ckpt\", \".vae.pt\").replace(\".safetensors\", \".vae.pt\")\n",
         "                    print(base_name)\n",
-        "            elif model_type ==\"Texual_Inversion\":\n",
+        "            elif model_type_2 ==\"Texual_Inversion\":\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
         "                    base_name = base_name.replace(\".ckpt\", \".pt\").replace(\".safetensors\", \".pt\")\n",
         "                    print(base_name)                \n",
@@ -451,12 +448,12 @@
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
         "\n",
         "        else:\n",
-        "            if model_type == \"VAE\":\n",
+        "            if model_type_2 == \"VAE\":\n",
         "                pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
         "                    base_name = base_name.replace(\".ckpt\", \".vae.pt\").replace(\".safetensors\", \".vae.pt\")\n",
         "                    print(base_name)\n",
-        "            elif model_type ==\"Texual_Inversion\":\n",
+        "            elif model_type_2 ==\"Texual_Inversion\":\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
         "                    base_name = base_name.replace(\".ckpt\", \".pt\").replace(\".safetensors\", \".pt\")\n",
         "                    print(base_name)                \n",
@@ -500,8 +497,6 @@
         "▼Colabページの説明<br>\n",
         "[stable-diffusion-webui-colab-japanese](https://github.com/AI-Nios/stable-diffusion-webui-colab-japanese)<br>\n",
         "<br>\n",
-        "▼以前のバージョン<br>\n",
-        "[Nios_v2.ipynb](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)<br><br> \n",
         "▼記事<br>\n",
         "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
         "<br>\n",
