--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -120,29 +120,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@title Extensions(任意)\n",
-        "extensions = \"https://github.com/yfszzx/stable-diffusion-webui-images-browser, https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\"  # @param {type:\"string\"}\n",
-        "extensions = list(map(str.strip, extensions.split(\",\")))\n",
-        "\n",
-        "\n",
-        "def install(url):\n",
-        "    import os\n",
-        "    base_name = os.path.basename(url)\n",
-        "        print(\"base_name\")    \n",
-        "    pretrained_model = \"/content/stable-diffusion-webui/extensions\"\n",
-        "    !git clone {url} {pretrained_model}/{base_name}\n",
-        "install(extensions)"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "TkFamP7xL6p9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "r8FuOir_Dkox",
@@ -154,7 +131,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name = \"ChilloutMix\"  #@param [\"7th_anime_v1\",\"7th_anime_v2\",\"7th_anime_v3\",\"7th_test\",\"7th_JP_test\",\"7thHeaven_Izumi_abyssdiff\",\"AbyssOrangeMix\",\"AbyssOrangeMix2\",\"AbyssOrangeMix3\",\"ACertainModel\",\"BloodOrangeMix\",\"ACertainThing\",\"Aikimi_dC3\",\"Aikimi_dC4\",\"Aikimi_diffusion_base_wd-1-5_beta2\",\"Almond_mix\",\"ambientmix\",\"anime-pencil-diffusion\",\"anysium_anypas\",\"Anything V5\",\"anything-v3.0\",\"anything-v4.0\",\"AnythingV-4.5\",\"ariamix\",\"Baka-Diffusion\",\"BalorMix-V4\",\"Balor-V2\",\"basil_mix\",\"BloodOrangeMix\",\"blue_pencil\",\"blue_pencil V-5\",\"blue_pencil_V4\",\"blue_pencil-v3\",\"Burger-Mix\",\"carrot-commercial-v1\",\"ChilloutMix\",\"CiderMix\",\"cinnamon_mix\",\"cool-japan-diffusion\",\"cornflowerStylizedAnime_v8\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"counterfeit-V2.5 2.5d tweak\",\"Crowbox-Vol.1\",\"DateMix\",\"Defacta-2th\",\"Defmix-v1.0\",\"Defmix-v2.0\",\"Deyoyoyo\",\"dreamlike-anime-1.0\",\"EerieOrangeMix\",\"EerieOrangeMix2\",\"ElyOrangeMix\",\"EmiPhaV\",\"endlessMix\",\"flex-diffusion-2-1\",\"GestaltMix-v1.0\",\"Graham_Special\",\"graupel-v1\",\"GuchaGucha_Shiki\",\"GyoZanMix\",\"HighRiseMixV1\",\"HighRiseMixV2\",\"HimawariMix-v1.0\",\"HimawariMix-v1.10\",\"HimawariMix-V2\",\"HonyararaMix\",\"Illuminati Diffusion v1.1\",\"JewelDefactaPastel\",\"LimeMix\",\"LiveArcaMix\",\"MagicalMix_v1\",\"MagicalMix_v2\",\"MeadMix\",\"MISA\",\"mitsua-diffusion-one\",\"MORIMORImix\",\"Nabylon\",\"NO133_104\",\"openjourney\",\"OsukiniMix\",\"pastel-mix\",\"RainierMix\",\"phantom-diffusion\",\"picasso-diffusion-1-1\",\"Plat Diffusion\",\"pvc-v3\",\"quattro-4merge-plus-i\",\"QuinceMix\",\"RacyMixV1\",\"Rainier-base\",\"RainierMix\",\"RainierMixV1\",\"RainierMixV2\",\"RainMix\",\"RDtMix\",\"Realistic Vision V2.0\",\"RefSlave-V1\",\"Replicant-V1.0\",\"Riga_Collection-v1\",\"RuminationDiffusion\",\"SakuraMix-V2\",\"Salt_mix\",\"SD2boy\",\"SD2boy_girl\",\"SD-Silicon28\",\"SD-Silicon29\",\"SEmix\",\"ShuimohuaAnime\",\"MORIMORImix\",\"SnowMix\",\"SSSSLLDDLL\",\"subtly\",\"SukiAni-mix\",\"SukiyakiMix-v1.0\",\"untitled-replicant\",\"wd-1-5-beta2-extra\",\"wd-1-5-beta2\",\"whitelady-V2\",\"Wonton ColorBox Enhanced\",\"X-mix\",\"xtracolor.v11\",\"YuzuGinger\",\"YuzuLemonChaiLatte\",\"YuzuLemonMilk\"] {allow-input: false}\n",
+        "model_name = \"BloodOrangeMix\"  #@param [\"7th_anime_v1\",\"7th_anime_v2\",\"7th_anime_v3\",\"7th_test\",\"7th_JP_test\",\"7thHeaven_Izumi_abyssdiff\",\"AbyssOrangeMix\",\"AbyssOrangeMix2\",\"AbyssOrangeMix3\",\"ACertainModel\",\"BloodOrangeMix\",\"ACertainThing\",\"Aikimi_dC3\",\"Aikimi_dC4\",\"Aikimi_diffusion_base_wd-1-5_beta2\",\"Almond_mix\",\"ambientmix\",\"anime-pencil-diffusion\",\"anysium_anypas\",\"Anything V5\",\"anything-v3.0\",\"anything-v4.0\",\"AnythingV-4.5\",\"ariamix\",\"Baka-Diffusion\",\"BalorMix-V4\",\"Balor-V2\",\"basil_mix\",\"BloodOrangeMix\",\"blue_pencil\",\"blue_pencil V-5\",\"blue_pencil_V4\",\"blue_pencil-v3\",\"Burger-Mix\",\"carrot-commercial-v1\",\"ChilloutMix\",\"CiderMix\",\"cinnamon_mix\",\"cool-japan-diffusion\",\"cornflowerStylizedAnime_v8\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"counterfeit-V2.5 2.5d tweak\",\"Crowbox-Vol.1\",\"DateMix\",\"Defacta-2th\",\"Defmix-v1.0\",\"Defmix-v2.0\",\"Deyoyoyo\",\"dreamlike-anime-1.0\",\"EerieOrangeMix\",\"EerieOrangeMix2\",\"ElyOrangeMix\",\"EmiPhaV\",\"endlessMix\",\"flex-diffusion-2-1\",\"GestaltMix-v1.0\",\"Graham_Special\",\"graupel-v1\",\"GuchaGucha_Shiki\",\"GyoZanMix\",\"HighRiseMixV1\",\"HighRiseMixV2\",\"HimawariMix-v1.0\",\"HimawariMix-v1.10\",\"HimawariMix-V2\",\"HonyararaMix\",\"Illuminati Diffusion v1.1\",\"JewelDefactaPastel\",\"LimeMix\",\"LiveArcaMix\",\"MagicalMix_v1\",\"MagicalMix_v2\",\"MeadMix\",\"MISA\",\"mitsua-diffusion-one\",\"MORIMORImix\",\"Nabylon\",\"NO133_104\",\"openjourney\",\"OsukiniMix\",\"pastel-mix\",\"RainierMix\",\"phantom-diffusion\",\"picasso-diffusion-1-1\",\"Plat Diffusion\",\"pvc-v3\",\"quattro-4merge-plus-i\",\"QuinceMix\",\"RacyMixV1\",\"Rainier-base\",\"RainierMix\",\"RainierMixV1\",\"RainierMixV2\",\"RainMix\",\"RDtMix\",\"Realistic Vision V2.0\",\"RefSlave-V1\",\"Replicant-V1.0\",\"Riga_Collection-v1\",\"RuminationDiffusion\",\"SakuraMix-V2\",\"Salt_mix\",\"SD2boy\",\"SD2boy_girl\",\"SD-Silicon28\",\"SD-Silicon29\",\"SEmix\",\"ShuimohuaAnime\",\"MORIMORImix\",\"SnowMix\",\"SSSSLLDDLL\",\"subtly\",\"SukiAni-mix\",\"SukiyakiMix-v1.0\",\"untitled-replicant\",\"wd-1-5-beta2-extra\",\"wd-1-5-beta2\",\"whitelady-V2\",\"Wonton ColorBox Enhanced\",\"X-mix\",\"xtracolor.v11\",\"YuzuGinger\",\"YuzuLemonChaiLatte\",\"YuzuLemonMilk\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"7th_anime_v1\":[\"https://huggingface.co/syaimu/7th_Layer/resolve/main/7th_anime_v1/7th_anime_v1.1.safetensors\"],\n",
@@ -342,32 +319,34 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### カスタム(任意)"
+      ],
+      "metadata": {
+        "id": "cs9eiDFhB1yN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@title ngrok(任意)\n",
-        "# @markdown Get token from [here](https://dashboard.ngrok.com/get-started/your-authtoken)\n",
+        "#@title Extensions\n",
+        "import os\n",
         "\n",
-        "load_token_from_gdrive = True  # @param {type:\"boolean\"}\n",
-        "ngrok_auth_token = \"\"  # @param {type: \"string\"}\n",
-        "ngrok_region = \"jp\"  # @param [\"default\", \"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
+        "extensions = \"https://github.com/yfszzx/stable-diffusion-webui-images-browser, https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\"  # @param {type:\"string\"}\n",
+        "extensions = list(map(str.strip, extensions.split(\",\")))\n",
         "\n",
-        "if os.path.exists(f\"{data_dir}/ngrok.txt\") :\n",
-        "    with open(f\"{data_dir}/ngrok.txt\", mode=\"r\") as f:\n",
-        "        lines = f.readlines()\n",
-        "        if not ngrok_auth_token and len(lines) > 0:\n",
-        "            ngrok_auth_token = lines[0].strip()\n",
-        "        if ngrok_region == \"default\" and len(lines) > 1:\n",
-        "            ngrok_region = lines[1].strip()\n",
+        "def install(urls):\n",
+        "    for url in urls:\n",
+        "        extension_name = os.path.basename(url)\n",
+        "        print(extension_name)    \n",
+        "        !git clone {url} /content/stable-diffusion-webui/extensions/{base_name}\n",
         "\n",
-        "with open(f\"{data_dir}/ngrok.txt\", mode=\"w\") as f:\n",
-        "    f.write(f\"{ngrok_auth_token}\\n{ngrok_region}\")\n",
-        "\n",
-        "if not ngrok_region or ngrok_region == \"default\":\n",
-        "    ngrok_region = \"us\""
+        "install(extensions)"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "ghAmmgPZOvP0"
+        "id": "TkFamP7xL6p9"
       },
       "execution_count": null,
       "outputs": []
@@ -375,7 +354,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title ドライブをマウント(任意)\n",
+        "#@title ドライブをマウント\n",
         "\n",
         "Mount_Drive = True # @param {type: \"boolean\"}\n",
         "\n",
@@ -385,7 +364,7 @@
         "    if not os.path.exists(\"/content/drive\"):\n",
         "        drive.mount(\"/content/drive\")\n",
         "\n",
-        "model_type_1 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
+        "model_type_1 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\"] {allow-input: false}\n",
         "if model_type_1 == \"Checkpoint\":\n",
         "    pretrained_model_1 = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type_1 == \"Hypernetwork\":\n",
@@ -429,7 +408,8 @@
         "  print(\"\")\n"
       ],
       "metadata": {
-        "id": "ywV9LPuWCEok"
+        "id": "ywV9LPuWCEok",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -470,7 +450,6 @@
         "            os.chdir(pretrained_model)\n",
         "            !gdown --fuzzy {url}\n",
         "        elif url.startswith(\"https://huggingface.co/\"):\n",
-        "                    #@markdown ▼Hugging Faceのプライベートモデルを使用する場合、[アクセストークン](https://huggingface.co/settings/tokens)を入力してください。\n",
         "            huggingface_token = \"\"  # @param {type:\"string\"}\n",
         "            user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
         "            if \"/blob/\" in url:\n",
@@ -512,9 +491,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 4.WebUIの起動"
+      ],
+      "metadata": {
+        "id": "fhemplTlCOmk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@title  4.WebUIの起動\n",
+        "#@title  Run script\n",
         "%cd /content/stable-diffusion-webui\n",
         "!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' /content/stable-diffusion-webui/modules/shared.py\n",
         "\n",
@@ -530,8 +518,9 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
         "**生成した画像の利用については自己判断および自己責任でお願いします。**<br>\n",
-        "<br>\n",
+        "### 備考\n",
         "▼学習済みモデルの検索<br>\n",
         "[HuggingFace](https://huggingface.co/ckpt)<br>\n",
         "[Civitai](https://civitai.com/)<br><br>\n",
@@ -547,7 +536,7 @@
         "[あかちゃんLoRAノートブック](https://seesaawiki.jp/nai_ch/d/kohya_train_network_simple)<br>\n",
         "もしくはこちら<br>\n",
         "[【最新バージョン】Loraモデル学習をGoogle Colabで作る方法解説。Kohya LoRA Dreambooth v14.1使用。【Stable Diffusion】](https://www.youtube.com/watch?v=ddpaECgRCHg&ab_channel=ShinanoMatsumoto%E3%83%BB%E6%99%B4%E3%82%8C%E6%99%82%E3%80%85%E3%82%AC%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88)<br>\n",
-        "もしくはこちら<br>\n",
+        "おすすめ<br>\n",
         "[【StableDiffusion】初めてのAIお絵かき講座 その4 キャラや絵柄を追加学習！LoRA編【Anything V4.5】](https://www.nicovideo.jp/watch/sm41895651)\n"
       ],
       "metadata": {
@@ -559,6 +548,9 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "cs9eiDFhB1yN"
+      ],
       "include_colab_link": true
     },
     "gpuClass": "standard",
