--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -551,6 +551,7 @@
       "collapsed_sections": [
         "cs9eiDFhB1yN"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "gpuClass": "standard",
