Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -139,7 +139,7 @@
         "    \"kl-f8-anime\": \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\",\n",
         "    \"kl-f8-anime2\": \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt\",\n",
         "    \"Anything-V3.0\": \"https://huggingface.co/ckpt/anything-v3.0/resolve/main/Anything-V3.0.vae.pt\",\n",
-        "    \"anything-v4.0\":\"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.0.vae.pt\"\n",
+        "    \"anything-v4.0\":\"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.0.vae.pt\",\n",
         "    \"autoencoder_fix_kl-f8-trinart_characters\": \"https://huggingface.co/naclbit/trinart_characters_19.2m_stable_diffusion_v1/resolve/main/autoencoder_fix_kl-f8-trinart_characters.ckpt\",\n",
         "    \"orangemix\": \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt\",\n",
         "}\n",
